--- a/.vscode/3week/.vscode/tasks.json
+++ b/.vscode/3week/.vscode/tasks.json
@@ -1,29 +1,20 @@
 {
+    "version": "2.0.0",
     "tasks": [
         {
-            "type": "cppbuild",
-            "label": "C/C++: gcc.exe 활성 파일 빌드",
-            "command": "C:/mingw/bin/gcc.exe",
+            "label": "Build C Program",
+            "type": "shell",
+            "command": "gcc",
             "args": [
-                "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe",
-                ""
-            ],
-            "options": {
-                "cwd": "C:/mingw/bin"
-            },
-            "problemMatcher": [
-                "$gcc"
+                "${fileDirname}/${fileBasenameNoExtension}"
             ],
             "group": {
                 "kind": "build",
                 "isDefault": true
-            },
-            "detail": "디버거에서 생성된 작업입니다."
+            }
         }
-    ],
-    "version": "2.0.0"
+    ]
 }
