--- a/.vscode/3week/.vscode/launch.json
+++ b/.vscode/3week/.vscode/launch.json
@@ -44,7 +44,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "label": "C/C++: g++ Generate activity files",
+            "preLaunchTask": "C/C++: gcc.exe 활성 파일 빌드"
         }
     ]
 }
